--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
 NotEmpty=El campo es requerido
-NotEmpty.usuario.nombre=El campo nombre es requerido
+NotEmpty.usuario.nombre=El campo nombre no puede ser vacío
 NotEmpty.usuario.username=El username es obligatorio
-Email.usuario.email=El formato del correo es incorrecto, falta el @
+Email.usuario.email=El formato del correo es inválido, falta el @
