--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,4 @@ NotEmpty=El campo es requerido
 NotEmpty.usuario.nombre=El campo nombre no puede ser vacío
 NotEmpty.usuario.username=El username es obligatorio
 Email.usuario.email=El formato del correo es inválido, falta el @
+pattern.usuario.identificador=formato de la expresión regular incorrecto
