--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,4 @@ NotEmpty.usuario.nombre=El campo nombre no puede ser vacío
 NotEmpty.usuario.username=El username es obligatorio
 Email.usuario.email=El formato del correo es inválido, falta el @
 pattern.usuario.identificador=formato de la expresión regular incorrecto
+requerido.usuario.nombre=El campo nombre es requerido
