--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,4 @@ Email.usuario.email=El formato del correo es inválido, falta el @
 pattern.usuario.identificador=formato de la expresión regular incorrecto
 requerido.usuario.nombre=El campo nombre es requerido
 IdentificadorRegex.usuario.identificador=formato de la expresión regular inválido con anotación
+Requerido.usuario.apellido=Apellido es requerido con anotaciones
