--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,5 @@ pattern.usuario.identificador=formato de la expresión regular incorrecto
 requerido.usuario.nombre=El campo nombre es requerido
 IdentificadorRegex.usuario.identificador=formato de la expresión regular inválido con anotación
 Requerido.usuario.apellido=Apellido es requerido con anotaciones
+typeMismatch.java.lang.Integer=Debe ser un entero
+typeMismatch.usuario.cuenta=El campo cuenta debe ser un entero
